force-app/main/default/objects/Runs__c/Runs__c.object-meta.xml
<CustomObject>
    <description>This shows the runs that have been completed.</description>
    <label>Completed Run</label>
    <nameField>
        <displayFormat>{0000}</displayFormat>
        <label>Runs Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Completed Runs</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>