force-app/main/default/objects/Runs__c/fields/Distance__c.field-meta.xml
<CustomField>
    <fullName>Distance__c</fullName>
    <description>This is the distance ran.</description>
    <label>Distance</label>
    <precision>10</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>