force-app/main/default/objects/Runs__c/fields/Distance_Ran__c.field-meta.xml
<CustomField>
    <fullName>Distance_Ran__c</fullName>
    <description>This shows the distance ran with the word &quot;miles&quot; in front of it.</description>
    <formula>IF(Distance__c &gt; 0,TEXT(Distance__c) &amp;  &quot; Miles&quot;, &quot;N/A&quot;)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Distance Ran</label>
    <type>Text</type>
</CustomField>