force-app/main/default/objects/Runs__c/fields/Duration_of_Run__c.field-meta.xml
<CustomField>
    <fullName>Duration_of_Run__c</fullName>
    <description>This shows the duration of the run with the word &quot;minutes&quot; in front of it.</description>
    <formula>TEXT(Run_Duration__c) &amp; &quot; minutes&quot;</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Duration of Run</label>
    <type>Text</type>
</CustomField>