force-app/main/default/objects/Runs__c/fields/Run_Date__c.field-meta.xml
<CustomField>
    <fullName>Run_Date__c</fullName>
    <description>This is the date the run was completed.</description>
    <label>Run Date</label>
    <required>true</required>
    <type>Date</type>
</CustomField>