force-app/main/default/objects/Runs__c/fields/Run_Duration__c.field-meta.xml
<CustomField>
    <fullName>Run_Duration__c</fullName>
    <description>This is the duration of the run.</description>
    <inlineHelpText>Enter the duration of your run in minutes.</inlineHelpText>
    <label>Run Duration (in minutes)</label>
    <precision>3</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>