force-app/main/default/objects/Runs__c/fields/Run_Type__c.field-meta.xml
<CustomField>
    <fullName>Run_Type__c</fullName>
    <description>This shows the type of run or walk that was completed</description>
    <label>Run Type</label>
    <required>true</required>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Treadmill Run</fullName>
            </value>
            <value>
                <fullName>Treadmill Walk</fullName>
            </value>
            <value>
                <fullName>Neighborhood Run</fullName>
            </value>
            <value>
                <fullName>Neighborhood Walk</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>