force-app/main/default/objects/Runs__c/fields/Runner_Name__c.field-meta.xml
<CustomField>
    <fullName>Runner_Name__c</fullName>
    <description>The name of the runner who completed the run.</description>
    <label>Runner</label>
    <referenceTo>Runner__c</referenceTo>
    <relationshipLabel>Completed Runs</relationshipLabel>
    <relationshipName>Completed_Runs</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>