force-app/main/default/objects/Runs__c/fields/Type_of_Run_Walk__c.field-meta.xml
<CustomField>
    <fullName>Type_of_Run_Walk__c</fullName>
    <description>This will display an image of the type of run/walk that was completed.</description>
    <formula>IF((TEXT(Run_Type__c) == &quot;Treadmill Run&quot;),IMAGE(&quot;https://akeemadkins-dev-ed--c.documentforce.com/servlet/servlet.FileDownload?file=0153t000003J4eM&quot;, &quot;Treadmill Run&quot;, 100, 150), 
		IF((TEXT(Run_Type__c) == &quot;Treadmill Walk&quot;),IMAGE(&quot;https://akeemadkins-dev-ed--c.documentforce.com/servlet/servlet.FileDownload?file=0153t000003J4eb&quot;, &quot;Treadmill Walk&quot;, 100, 150), 
				IF((TEXT(Run_Type__c) == &quot;Neighborhood Run&quot;),IMAGE(&quot;https://akeemadkins-dev-ed--c.documentforce.com/servlet/servlet.FileDownload?file=0153t000003J4e7&quot;, &quot;Neighborhood Run&quot;, 100, 150), 
						IF((TEXT(Run_Type__c) == &quot;Neighborhood Walk&quot;),IMAGE(&quot;https://akeemadkins-dev-ed--c.documentforce.com/servlet/servlet.FileDownload?file=0153t000003J4eC&quot;, &quot;Treadmill Walk&quot;, 100, 150),&quot;&quot;))))</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Type of Run/Walk</label>
    <type>Text</type>
</CustomField>