force-app/main/default/objects/Runs__c/listViews/Preferred_Completed_Runs_View.listView-meta.xml
<ListView>
    <fullName>Preferred_Completed_Runs_View</fullName>
    <columns>Runner_Name__c</columns>
    <columns>Run_Date__c</columns>
    <columns>Run_Type__c</columns>
    <filterScope>Everything</filterScope>
    <label>Preferred Completed Runs View</label>
</ListView>